# remotedesktop

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml  abi.proto  build.rs
common/src/: error.rs  lib.rs  utils.rs
common/src/capture/: mod.rs
common/src/network/: frame.rs  mod.rs
common/src/pb/: abi.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
