[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } 
common = { path = "../common" }
bytes = "1"
# fltk = {version = "^1.2", features = ["fltk-bundled"] }
fltk = { version = "^1.2" }