[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
zstd = "0.9" # compress/decompress
prost = "0.9.0" # protobuf
tokio = { version = "1", features = ["full"] } 
thiserror = "1"
anyhow = "1"
scrap = "0.5" # Screen capture
repng = "0.2"
futures = "0.3"


[dev-dependencies]
image = "0.24"

[build-dependencies]
prost-build = "0.9.0"